* bld.env() -> bld.env
* conf.test.uselib -> conf.test.uselib_store, "uselib" now has the same
meaning in configuration and build)
* the helper functions have been moved to Utils.py
* Task_gen.g_allobj -> bld.all_task_gen or Params.g_build.all_task_gen
* Params.g_autoconfig -> Configure.autoconfig
* Params.pprint -> Utils.pprint
* The old priority system was removed
* m_tstamp_variants -> node_sigs
* bld_sigs -> task_sigs

NEW IN WAF 1.4.3
----------------
* elimination of the Action classes
* quote '%' characters in subst_obj
* boost module improvements
* two new dependency algorithms
* automatic dependency computation (task chaining)

NEW IN WAF 1.4.2
----------------
* updated documentation (waf.pdf)
* new examples (demos/simple_scenarios/)
* node system bugfixes
* compile multiple vala files at the same time
* optimization of the method clone()

NEW IN WAF 1.4.1
----------------

* the gnome help installation is finally correct
* java support improvements
* in qt4 projects, dependencies are added on files listed in the qrc
* object extensions uses a new scheme to avoid conflicts
* optional dependency tracking on headers out of the build directory (bug:132)
* set the c language extension to ".c" only
* bash completion
* installation system fixes

NEW IN WAF 1.4.0
----------------

* various optimizations - see http://freehackers.org/~tnagy/bench.txt
* new system for adding methods dynamically (extend c/c++ builders)
* export_incdirs will add the folders when linking against libraries given in uselib_local
* the type 'plugin' disappears, the c/c++ types are staticlib,program,shlib
* configuration modules simplification (gcc, g++, ..)
* the configuration details are written to config.log
* the configuration defines are written in order of declaration
* the configuration process can be modified dynamically
* autoconfiguration no longer loses the command-line options
* clone no longer clashes with uselib_local
